deploy: bba2a1832394c790a3aaa24cd74203143f5f5556

--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - buildyourownlisp-by-zig</title>
-        <base href="/buildyourownlisp-by-zig/">
+        <title>Page not found - buildyourownlisp-in-zig</title>
+        <base href="/buildyourownlisp-in-zig/">
 
 
         <!-- Custom HTML head -->
@@ -18,7 +18,7 @@
           gtag('config', 'G-855BJNV9VD');
         </script>
         <!-- #endregion: Google tag (gtag.js) -->
-        <meta name="description" content="buildyourownlisp by zig">
+        <meta name="description" content="buildyourownlisp in zig">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
@@ -149,13 +149,13 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">buildyourownlisp-by-zig</h1>
+                    <h1 class="menu-title">buildyourownlisp-in-zig</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
-                        <a href="https://github.com/netpyoung/buildyourownlisp-by-zig" title="Git repository" aria-label="Git repository">
+                        <a href="https://github.com/netpyoung/buildyourownlisp-in-zig" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
 
