--- a/ch13.html
+++ b/ch13.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>13. 비교 - buildyourownlisp-by-zig</title>
+        <title>13. 비교 - buildyourownlisp-in-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -17,7 +17,7 @@
           gtag('config', 'G-855BJNV9VD');
         </script>
         <!-- #endregion: Google tag (gtag.js) -->
-        <meta name="description" content="buildyourownlisp by zig">
+        <meta name="description" content="buildyourownlisp in zig">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
@@ -148,16 +148,16 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">buildyourownlisp-by-zig</h1>
+                    <h1 class="menu-title">buildyourownlisp-in-zig</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
-                        <a href="https://github.com/netpyoung/buildyourownlisp-by-zig" title="Git repository" aria-label="Git repository">
+                        <a href="https://github.com/netpyoung/buildyourownlisp-in-zig" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/netpyoung/buildyourownlisp-by-zig/edit/main/src/ch13.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
+                        <a href="https://github.com/netpyoung/buildyourownlisp-in-zig/edit/main/src/ch13.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
